2003-05-28 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Incremented version to 0.97.1

	* src/main_window.cpp: Added conversion routine to convert from
	the old addbook format to the new one.
	
2003-05-28 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp, src/ils.cpp: Groups keys are now 
	case-unsensitive.
	
2003-05-28 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp: Fixed bug in previous commit.
	
2003-05-28 Damien Sandras  <dsandras@seconix.com>

	* src/callbacks.cpp: Fixed About Box.
	
	* src/ldap_window.cpp: Prevents to add 2 groups with the same name 
	(still possible to do it with gconf-editor). Make GtkEntries in dialogs
	default to GTK_RESPONSE_ACCEPT.
	
	* src/toolbar.cpp: Moved the address book icon down.
	
2003-05-27 Damien Sandras  <dsandras@seconix.com>

	* src/callbacks.cpp: Fixed bug in previous commit.
	
2003-05-27 Damien Sandras  <dsandras@seconix.com>

	* lib/stock-icons.c, lib/stock-icons.h: Added new icons from jimmac
	for brightness, whiteness, colourness, contrast, addressbook. Thanks
	Jakub!
	
	* pixmaps/Makefile.am: See above.

	* pixmaps/addressbook-16.png, pixmaps/addressbook-24.png, 
	pixmaps/brightness.png, pixmaps/colourness.png, pixmaps/contrast.png,
	pixmaps/whiteness.png: Added those files.
	
	* pixmaps/contrast.xpm, pixmaps/brightness.xpm, pixmaps/color.xpm,
	pixmaps/ils-directory.png, pixmaps/whiteness.xpm, 
	pixmaps/xdap-directory.xpm: Removed those files.
	
	* src/druid.cpp, src/gnomemeeting.cpp, src/ils.cpp, src/lid.cpp:
	Don't hardcode callto:// but use the new DefaultURL from the
	class GMURL. h323: is now the default, and not callto: anymore.
	
	* src/ldap_window.cpp, src/ldap_window.h: Make use of the new GMURL
	class everywhere it makes sense, including to compare URLs. Added
	support for H.323 URLS.

	* src/main_window.cpp: Fixed wrong stat counter, added new icons
	for whiteness, brightness, contrast, colourness.

	* src/menu.cpp: Added new icon from addressbook.
